[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/PauseSingle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Itim-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="PauseSingle" type="CanvasLayer"]
pause_mode = 2
layer = 128

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="Pause"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.667419
margin_bottom = 0.667419
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -175.0
margin_right = 212.0
margin_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 7
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Pause/Overlay/VBoxContainer"]
margin_right = 424.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 1 )
text = "Game paused"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty_space" type="Label" parent="Pause/Overlay/VBoxContainer"]
margin_top = 6.0
margin_right = 424.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Overlay/VBoxContainer"]
margin_top = 12.0
margin_right = 424.0
margin_bottom = 350.0
size_flags_horizontal = 5
size_flags_vertical = 7

[node name="Resume" type="Button" parent="Pause/Overlay/VBoxContainer/VBoxContainer"]
margin_right = 424.0
margin_bottom = 81.0
size_flags_vertical = 3
text = "Resume"

[node name="Settings" type="Button" parent="Pause/Overlay/VBoxContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 424.0
margin_bottom = 167.0
size_flags_vertical = 3
text = "Settings"

[node name="Main_menu" type="Button" parent="Pause/Overlay/VBoxContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 424.0
margin_bottom = 252.0
size_flags_vertical = 3
text = "Main Menu"

[node name="Quit" type="Button" parent="Pause/Overlay/VBoxContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 424.0
margin_bottom = 338.0
size_flags_vertical = 3
text = "Quit"

[node name="SettingsMenu" parent="Pause" instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Pause/Overlay/VBoxContainer/VBoxContainer/Resume" to="Pause" method="_on_Restart_pressed"]
[connection signal="pressed" from="Pause/Overlay/VBoxContainer/VBoxContainer/Settings" to="Pause" method="_on_Settings_pressed"]
[connection signal="pressed" from="Pause/Overlay/VBoxContainer/VBoxContainer/Main_menu" to="Pause" method="_on_Main_menu_pressed"]
[connection signal="pressed" from="Pause/Overlay/VBoxContainer/VBoxContainer/Quit" to="Pause" method="_on_Quit_pressed"]
